services page updates, including all spacing fixes, testimonials and partners

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body {
   font-family: 'Raleway', sans-serif !important;
-  font-weight: 300;
-  letter-spacing: 1px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 2;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 
@@ -54,14 +55,14 @@ h1{
   font-family: 'Cormorant Garamond', serif;
   letter-spacing: 0.1px;
   font-weight: 300;
-  font-size: 3rem !important;
+  font-size: 2.6rem !important;
 }
 
 h2{
   font-family: 'Cormorant Garamond', serif;
   letter-spacing: 0.1px;
   font-weight: 300;
-  font-size: 2.4rem !important;
+  font-size: 2.5rem !important;
 }
 
 h3{
@@ -97,10 +98,10 @@ h3{
 .button{
   background-color: #ddd8c4 !important;
   text-transform: uppercase;
-  font-size: 0.8rem !important;
+  font-size: 0.9rem !important;
   letter-spacing: 2px !important;
   border: none !important;
-  color: #000000 !important;
+  color: #494949 !important;
   border-radius: 0px !important;
   border-bottom-right-radius: 10px !important;
   padding: 8px 30px !important;
