--- a/src/views/sections/Testimonials.css
+++ b/src/views/sections/Testimonials.css
@@ -11,3 +11,7 @@
     color: #494949 !important;
     text-decoration: none !important;
 }
+
+q{
+    font-size: 1.2rem;
+}
